--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,5 +42,9 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-  }
+  },
+  "include": ["src"],
+  "exclude": [
+    "prisma.config.ts"
+  ]
 }
