--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "npx prisma generate && tsc",
+    "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts,.js"
   },
