--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     // File Layout
     "rootDir": "./src",
     "outDir": "./dist",
+    "paths": {
+      "@prisma/*": ["./src/generated/prisma/*"]
+    },
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
